--- a/warehouse/css/warehouse.css
+++ b/warehouse/css/warehouse.css
@@ -1004,7 +1004,7 @@ input:checked+.card>.card-img {
     /* Smartphones */
     .title>h2 {
 
-        font-size: xx-large;
+        font-size: x-large;
     }
 
     #calcom>.title {
@@ -1052,7 +1052,7 @@ input:checked+.card>.card-img {
     /* Tablets */
     .title>h2 {
 
-        font-size: xx-large;
+        font-size: x-large;
     }
 
     #calcom>.title {
